engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__advanced_only_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for GPT-5.5


› 1. More reasoning…  Ultra consumes usage limits faster

  enter select · esc back
